package eapli.base.ordersmanagement.costumer.domain;

public class PostalAddress {
}
