/*
package eapli.base.ordersmanagement.domain;

import javax.persistence.Entity;
import java.io.Serializable;

@Entity
public class ShippingMethod implements Serializable {
}
*/
