package eapli.base.warehousemanagement.domain;

import eapli.framework.domain.model.ValueObject;

public enum Status implements ValueObject {

    FREE,
    CHARGING,
    OCCUPIED,

}
