@startuml
skinparam object {
ArrowColor DarkBlue
}

skinparam stereotypeCBackgroundColor LightBlue


/' OrderManagement '/
package OrderManagement <<Aggregate>>{

entity Product <<Entity>> <<Root>>

object ProductPriceDetail

object Price <<Value Object>>

object Barcode <<Value Object>>

object Picture <<Value Object>>

object Brand <<Value Object>>

object ProductItem <<Value Object>>

object Quantity <<Value Object>>

object Weight <<Value Object>>

entity ProductDescription <<Entity>>

object Reference <<Value Object>>

object UniqueInternalCode <<Value Object>>

entity Order <<Entity>> <<Root>>

object Category <<Value Object>>

object SubCategory <<Value Object>>

object AlphaNumericCode <<Value Object>>

object Description <<Value Object>>

object LineOrder <<Value Object>>

object Catalog

object PriceTableID <<Value Object>>

entity PriceTable <<Entity>>

entity SalesRegion <<Entity>>

entity Costumer <<Entity>> <<Root>>

object Contact <<Value Object>>

object PhoneNumber <<Value Object>>

object EmailAddress <<Value Object>>

object Name <<Value Object>>

object Gender <<Value Object>>

    entity PostalAddress <<Entity>> {
    - Type
    }

object DateTime <<Value Object>>

object OrderID <<Value Object>>

object ShoppingCart <<Value Object>>

object PaymentMethod <<Value Object>>

object ShippingCost <<ValueObject>>

object Volume <<ValueObject>>
}

/' WarehouseManagement '/
 package WarehouseManagement <<Aggregate>>{

 entity Warehouse <<Entity>> <<Root>>{
     -Row
     -Shelf
     -Aisle
     }

 entity AGV <<Entity>>{
     -Autonomy
     }

object Route <<Value Object>>

object Identifier <<Value Object>>

object Plan <<Value Object>>

object AGVDescription <<ValueObject>>

object MaxWeightCarry <<ValueObject>>

object AGVDock <<ValueObject>>

entity Task <<Entity>>

object CostumerID <<Value Object>>

object Birthday <<Value Object>>

object VATIdentifier <<Value Object>>

   entity ShippingMethod <<Entity>>{
    -Type
    }

     entity Status <<Entity>>{
        -State
     }

object Model <<ValueObject>>

    object StorageArea <<ValueObject>> {
     -AisleId
     -RowId
     -ShelfId
     }
}

/' Survey '/
package Survey <<Aggregate>>{

    object Survey <<Value Object>> {
    -topic
    }

object SurveyAlphaNumericCode <<ValueObject>>

object SurveyDescription <<ValueObject>>

object SurveyPeriod <<ValueObject>>

object SurveyRule <<ValueObject>>
}

/' Costumer '/
Costumer --- "1" CostumerID : has >
Costumer --- "1" Contact : preferredContact >
Costumer -- "1" Name : identifiedBy >
Costumer --  Contact : contacts
Costumer -- "1" Gender : identifiedBy >
Costumer -- "1..*" PostalAddress : has >
Costumer -- "1" Birthday : dateOfBirth >
Contact <|-- PhoneNumber
Contact <|-- EmailAddress
Costumer -- "1" Survey : answers >
Costumer -- "1" VATIdentifier : has >


/' Product '/
Product --- "1" Category: categorized >
Product --- "1..*" Picture: has >
Product --- "1" Barcode: has >
Product --- "1" Brand: has >
ProductPriceDetail -- "1" Product: >
ProductPriceDetail --- "1..*" PriceTable: >
PriceTable --- "1" PriceTableID: >
PriceTable --- "1" SalesRegion: >
Product --- "1" ProductItem: becomes >
ProductItem --- "1" Quantity: has >
Product --- "1" Reference: has >
Product --- "1..*" ProductDescription: has >
Product --- "1" UniqueInternalCode: has >
Category --- "1..*" SubCategory: has >


/' Category '/
Category --- "1" AlphaNumericCode  : categorized >
Category --- "1" Description  : categorized >


/' Warehouse '/
Warehouse -- "1..*" AGV: has >
AGV -- "1..*" Route: has >
AGV -- "1" Identifier: has >
AGV -- "1" Model: has >
Warehouse -- "1" Plan: >
AGV -- "1" AGVDescription : has >
AGV -- "1" MaxWeightCarry : has >
AGV -- "1" AGVDock : has >
AGV -- "1" Task : performs >


/' Survey '/
Survey -- "1..*" SurveyRule: has >
Survey -- "1" SurveyDescription: has >
Survey -- "1" SurveyAlphaNumericCode: caracterized >
Survey -- "1" SurveyPeriod: has >


/' ShippingCost '/
ShippingCost --- Weight: depends >
ShippingCost --- Volume: depends >


/' Order '/
Order --- "1" OrderID : >
Order --- "1" DateTime : >
Order --- "1" Status : has >
Order --- "1" PaymentMethod : has >
Order --- "1" ShippingMethod : has >
Order --- "1" Survey : generates >
ShippingCost --- "1" SalesRegion: depends >
ShippingMethod--- "1" ShippingCost: has >
Product --- "1" Weight: has >
LineOrder -- "1" Price: has >
LineOrder --- "1" Order: >
LineOrder --- "1" ProductItem: has >


/' ShoppingCart '/
ShoppingCart --- "1..*" ProductItem: has >


/' Catalog '/
Costumer --- "1..*" Catalog: sees >
Catalog --- "1..*" Product: has >


/' Joined Aggregates '/
Costumer "1" -- "1..*" Order: orders >
Costumer -- "1..*" Product: chooses >
Warehouse -- "1..*" StorageArea: contains >
StorageArea -- "1..*" Product: stores >
@enduml